...
                      <Text style={styles.contactText}>{businessDetails.contactEmail}</Text>
                    </TouchableOpacity>
                  )}
                </View>
              )}

              <Text style={styles.reviewTitle}>Reviews:</Text>
              {businessDetails.reviews.slice(0, reviewLimit).map((item, index) => (
                <View key={index} style={styles.reviewItem}>
                  <View style={styles.reviewHeader}>
                    <Text style={styles.reviewUser}>{item.User?.fullName || item.userEmail}:</Text>
                    <View style={styles.starContainer}>
                      {[1, 2, 3, 4, 5].map((num) => (
...
                  <Text style={styles.showLessText}>Show Less</Text>
                </TouchableOpacity>
              )}

              {hasUserWithBusiness && 
              (<TouchableOpacity style={styles.addButton} onPress={() => setIsModalVisible(true)}>
                <Text style={styles.addButtonText}>Add Review</Text>
              </TouchableOpacity>)}

              <Modal visible={isModalVisible} animationType="slide" transparent>
                <TouchableOpacity
                  style={styles.modalContainer}
                  activeOpacity={1}
...
                    style={styles.modalContent}
                    onPress={() => {}}
                  >
                    <Text style={styles.modalTitle}>Write a Review</Text>
                    <TextInput
                      style={styles.input}
                      placeholder="Write your review..."
                      value={newReview}
                      onChangeText={setNewReview}
                      multiline
                      numberOfLines={4}
                      textAlignVertical="top"
                    />
...
                    </View>
                    <View style={styles.modalButtons}>
                      <TouchableOpacity style={styles.cancelButton} onPress={() => setIsModalVisible(false)}>
                        <Text style={styles.cancelText}>Cancel</Text>
                      </TouchableOpacity>
                      <TouchableOpacity style={styles.submitButton} onPress={addReview}>
                        <Text style={styles.submitText}>Submit</Text>
                      </TouchableOpacity>
                    </View>
                  </TouchableOpacity>
                </TouchableOpacity>
              </Modal>
              </View>
...
