...
        <Text style={styles.subHeader}>
          Create a safe password
        </Text>
        <View style={styles.inputWrapper}>
          <InputField
            icon="lock"
            placeholder="Password"
            keyboardType="default"
            value={password}
            onChangeText={(text) => {
              setPassword(text);
              validatePassword(text);
            }}
...
            <Text style={styles.infoText}>- Contain at least one special character</Text>
          </View>
        )}
        <View style={styles.inputWrapper}>
          <InputField
            icon="lock"
            placeholder="Confirm Password"
            keyboardType="default"
            value={confirmPassword}
            onChangeText={(text) => {setConfirmPassword(text)}}
            label="Confirm Password"
            secureTextEntry={true}
            marginTop={10}
...
