appId: com.idonagler.ShareBuy
env:
  USER_NAME: "test business"
  USER_EMAIL: "testbusiness@example.com"
  USER_PHONE: "0501234567"
  USER_PASSWORD: "Password1@"
  USER_COUNTRY: "Israel"
  USER_CITY: "Tel Aviv"
  USER_STREET: "Herzl"
  USER_HOUSE_NUMBER: "10"
  USER_ZIP: "12345"
  GROUP_NAME: "Treadmill"
onFlowStart:
  - runFlow: actions/welcome.yml
onFlowComplete:
  - runFlow: actions/closeApp.yml
---
# Test Purpose:
# Test if users can create user account

# Preconditions:
# - There is no account with the email ${USER_EMAIL} and password ${USER_PASSWORD}.

- tapOn:
    point: "75%,82%"
- tapOn: "I am a business owner"
- tapOn: "next, "
- tapOn: "Full Name"
- inputText: "${USER_NAME}" # Generic user name
- "hideKeyboard"
- tapOn: "Email"
- inputText: "${USER_EMAIL}" # Generic user email
- "hideKeyboard"
- tapOn: "Phone Number"
- inputText: "${USER_PHONE}" # Generic user phone
- "hideKeyboard"
- tapOn: "next, "
- tapOn: "Password"
- inputText: "${USER_PASSWORD}" # Generic password
- "hideKeyboard"
- tapOn: "Confirm Password"
- inputText: "${USER_PASSWORD}" # Generic password confirmation
- "hideKeyboard"
- tapOn: "next, "
- tapOn: "State"
- inputText: "${USER_COUNTRY}" # Generic country
- "hideKeyboard"
- tapOn: "City"
- inputText: "${USER_CITY}" # Generic city
- "hideKeyboard"
- tapOn: "Street"
- inputText: "${USER_STREET}" # Generic street
- "hideKeyboard"
- tapOn: "Street Number"
- inputText: "${USER_HOUSE_NUMBER}" # Generic house number
- "hideKeyboard"
- tapOn: "Zip Code"
- inputText: "${USER_ZIP}" # Generic zip code
- "hideKeyboard"
- tapOn: "next"

# fourth registration screen

- assertVisible: "What is your business name?"
- tapOn: "Business Name"
- inputText: "${BUSINESS_NAME}" # Generic business name
- "hideKeyboard"
- tapOn: "Business Number"
- inputText: "${BUSINESS_NUMBER}" # Generic business number
- "hideKeyboard"
- tapOn: "Category, "
- tapOn: "${BUSINESS_CATEGORY}" # Generic business category
- tapOn: "Description"
- inputText: "${BUSINESS_DESCRIPTION}" # Generic business description
- "hideKeyboard"
- tapOn: "next"

# fifth registration screen

- assertVisible: "Business Contact Information"
- tapOn: "Website Link"
- inputText: "${WEBSITE_LINK}" # Generic website link
- "hideKeyboard"
- tapOn: "Contact Email"
- inputText: "${CONTACT_EMAIL}" # Generic contact email
- "hideKeyboard"
- tapOn: "next"

# final registration screen

- assertVisible: "Secure Payment Setup"
- assertVisible: "Register bank details"
# - tapOn: "Register bank details"
# - tapOn:
#     point: "50%,49%"
# - tapOn: "finish registration"
# - assertVisible:
#     id: "toastContentContainer"

